@@ -6,6 +6,10 @@ HISTORY
 
  ++ New features:
 
+  2011-09-27: Simon Goldschmidt
+  * opt.h, tcp.c, tcp_in.c: Implemented limiting data on ooseq queue (task #9989)
+    (define TCP_OOSEQ_MAX_BYTES / TCP_OOSEQ_MAX_PBUFS in lwipopts.h)
+
   2011-09-21: Simon Goldschmidt
   * opt.h, api.h, api_lib.c, api_msg.h/.c, sockets.c: Implemented timeout on
     send (TCP only, bug #33820)
